# valdris

./: .gitignore  CONTRIBUTING.md  README.md  Timeline.md  Valderis Overview.md  Welcome.md  World Map.md  existing_files.txt  mkdocs.yml  pyproject.toml  requirements.txt
.obsidian/: app.json  community-plugins.json  graph.json
Adventures/: Echoes of the Great Silence.md  Gears of Conspiracy.md  The Awakening Protocols.md  The Brass Heart Gambit.md  The Silent Cartographer.md
Architect Ruins/: Singing Spires of Kelathon.md  Thymeris the Golden.md  Walking Gardens of Yss'andra.md
DM Resources/: Adventure Hooks.md  Missing Wiki Links Report.md
Economics & Trade/: Currency & Banking.md  Dual Economy Overview.md  Guild Economics.md  Resource Distribution.md  Trade Routes & Networks.md
Factions & Organizations/: Academy of Dual Mysteries.md  Council of Pathfinders.md  Gear-Wright Guilds.md  Order of the Brass Tower.md  Silence-Keepers.md  Tinker-Priests.md
Locations/: Crownsburg.md  The Sundered Kingdoms.md
Lore/: Architect Technology.md  Architect.md  Dual Economy.md  Magic in Valdris.md  Social Hierarchy.md  The Eternal Crown.md  The Great Silence.md  The Recent Awakening.md  War of Five Crowns.md
Music/: By Our Own Hands - Ruin-Shunner Hymn.md  Crown of Brass and Stone - Ruin-Holder Anthem.md  INSTRUMENTAL - Clockwork Dreams - Architect Technology Theme.md  INSTRUMENTAL - Crystal Harmonies - Singing Spires Theme.md  INSTRUMENTAL - Gears and Harvest - Work Song Theme.md  INSTRUMENTAL - Roads Between Worlds - Travel Theme.md  Music Index.md  (+8 more)
(+38 files in other folders)
