[tool.poetry]
name = "valdris"
version = "1.0.0"
description = "Valdris D&D Campaign World Documentation"
authors = ["Offending Commit <offendingcommit@gmail.com>"]
readme = "README.md"
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"
mkdocs-awesome-pages-plugin = "^2.9.2"
pymdown-extensions = "^10.7.1"
mkdocs-material-extensions = "^1.3.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"